# agent-hunter

./: .coverage  .gitignore  .pre-commit-config.yaml  BROWNFIELD_GUIDE.md  CHANGELOG.md  CI_DEBUG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  EDGE_CASES_v1.0.0.md  FINAL_STATUS_REPORT.md  GETTING_STARTED.md  GLOBAL_PLAN.MD  GOAL_ACHIEVEMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0-alpha.md  ROADMAP.md  SECURITY.md  SKILL.md  SKILL.md.backup  SPEC.md  START_HERE.md  coverage.json  pyproject.toml  release-automation.sh  requirements.txt  setup
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agent-hunter-update/: SKILL.md
assets/: contribute_template.md  skill_stub_template.md
config/: defaults.json
docs/: AUTOMATION_SUMMARY_WEEK4.md  DEMO_EXECUTION_LOG.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  IMPLEMENTATION_PLAN.md  RECOVERY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0-alpha.md  RELEASE_SUMMARY_v1.0.0.md  REVIEW_v1.0.0-alpha.md  ROADMAP_UPDATE.md  TEST_CLEANUP_PLAN.md  VALIDATION_PLAN.md  VALIDATION_RESULTS.md  VALIDATION_RESULTS_v1.0.0-alpha.md  WEEK2_FINAL_STATUS.md  WEEK2_PROGRESS.md  WEEK3_COMPLETION_SUMMARY.md  WEEK3_PROGRESS.md  WEEK4_AUTONOMOUS_COMPLETION.md  WEEK4_VALIDATION_SUMMARY.md
references/: SECURITY_PATTERNS.md  TRUSTED_KEYS.pub  TRUSTED_PUBLISHERS.yaml  VERIFIED_SKILLS.md  trusted_authors.json
scripts/: __init__.py  audit.py  context_extractor.py  dep_resolver.py  hunter.py  installer.py  main.py  mcp_parser.py  registry.py  release.py  reporter.py  rollback.py  sandbox.py  scaffold.py  scorer.py  security_scan.py  skill_parser.py  typo_detect.py  update.py  verify_sig.py
tests/: __init__.py  test_audit.py  test_context_extractor.py  test_dep_resolver.py  test_edge_cases.py  test_edge_cases_comprehensive.py  test_hunter.py  test_installer.py  test_integration_v0_2_0.py  test_main.py  test_release.py  (+13 more)
(+9 files in other folders)
