[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hunter"
version = "0.4.0"
description = "A Claude-native SKILL.md and MCP server discovery tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML",
    "requests",
    "rich"
]

[project.scripts]
agent-hunter = "scripts.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
