[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hunter"
version = "0.4.0"
description = "A Claude-native SKILL.md and MCP server discovery tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML",
    "requests",
    "rich"
]

[project.scripts]
agent-hunter = "scripts.main:main"

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "setup: integration tests for the ./setup installer script (may take 30-60s on first run)",
]

[tool.ruff]
line-length = 100
